Now with crown copyright comment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Digital by Default Service Standard — Government Service Design Manual</title>
     <link href="https://www.gov.uk/service-manual/assets/govuk_template/stylesheets/fonts.css" media="all" rel="stylesheet" type="text/css" />
-    <style>
+<!--
+
+    A copy of the UK government digital by default service standard intended to be printed out as a Red Amber Green dashboard using postit notes.
+
+    All content is available under the Open Government Licence v2.0, except where otherwise stated
+    © Crown copyright
+
+-->
+  <style>
 
 body {
   width: 290mm;
@@ -69,7 +77,6 @@ ol > li:before {
 <div class="title-page">
   <h1>Digital by Default Service Standard</h1>
   <img src="https://www.gov.uk/service-manual/assets/images/DbD-kitemark.png" />
-
   <p>The <a href="https://www.gov.uk/government/publications/government-digital-strategy">Government Digital Strategy</a> committed the government to ensuring all new or redesigned digital services meet this standard from April 2014.</p>
   <p>Services will be <a href="https://www.gov.uk/service-manual/digital-by-default/awarding-the-standard">assessed against the standard</a> and must continue to <a href="https://www.gov.uk/service-manual/digital-by-default/maintaining-the-standard">meet the standard after launch</a>. Digital teams must show that they understand that their <a href="https://www.gov.uk/service-manual/digital-by-default/scope-of-the-standard">service needs to meet the standard</a> and should understand <a href="https://www.gov.uk/service-manual/digital-by-default/failure-to-meet-the-standard">what happens to failing services</a>.</p>
   <p>Teams must meet the criteria below, and maintain this quality for the full life of their service.</p>
